wasm_error_2.txt
wasm
+- install abi
   +- compile exe abi Debug wasm32-freestanding 3 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Threaded.zig:4100:18: error: expected type 'error{AccessDenied,Canceled,PermissionDenied,SystemResources,Unexpected}', found 'error{Unimplemented}'
    return error.Unimplemented;
                 ^~~~~~~~~~~~~
referenced by:
    io: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Threaded.zig:882:14
    init: src\features\web\client.zig:29:32
    12 reference(s) hidden; use '-freference-trace=14' to see all references
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\posix.zig:82:27: error: struct 'posix.system__struct_2428' has no member named 'IOV_MAX'
pub const IOV_MAX = system.IOV_MAX;
                    ~~~~~~^~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\posix.zig:50:13: note: struct declared here
    else => struct {
            ^~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\posix.zig:119:33: error: struct 'posix.system__struct_2428' has no member named 'STDERR_FILENO'
pub const STDERR_FILENO = system.STDERR_FILENO;
                          ~~~~~~^~~~~~~~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\posix.zig:50:13: note: struct declared here
    else => struct {
            ^~~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -fno-entry -ODebug -target wasm32-freestanding -mcpu baseline --dep abi "-Mroot=C:\\Users\\donald\\abi\\bindings\\wasm\\abi_wasm.zig" -ODebug -target wasm32-freestanding -mcpu baseline --dep build_options "-Mabi=C:\\Users\\donald\\abi\\src\\abi.zig" "-Mbuild_options=.zig-cache\\c\\c07c9a01c693560df250c81757aa4c39\\options.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi -rdynamic --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 1/4 steps succeeded (1 failed)
wasm transitive failure
+- install abi transitive failure
   +- compile exe abi Debug wasm32-freestanding 3 errors

error: the following build command failed with exit code 1:
.zig-cache\o\a4f5d043c84821ef25e6293ace5a07e6\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x73bbba7c -Z587283ba5be03772 wasm -Denable-gpu=false -Denable-web=false
